Minor typo corrections to lectures 3 and 4. Added lecture date list as a separate file. LAB1 changed according to the covered course material

--- a/1718/lectures/00_opis_vjestine/00_opis_vjestine.tex
+++ b/1718/lectures/00_opis_vjestine/00_opis_vjestine.tex
@@ -161,9 +161,9 @@
 	\item 20.10.
 	\item 10.11.
 	\item 01.12. \textbf{+ prva laboratorijska vježba}
-	\item 08.12.
-	\item 15.12. \textbf{+ druga laboratorijska vježba}
-	\item 12.01.
+	\item 08.12. \textbf{(Termin traje 3 sata)}
+	\item \sout{15.12.} \textbf{OTKAZAN}
+	\item 12.01. \textbf{+ druga laboratorijska vježba (Termin traje 3 sata)}
 	\item 19.01. \textbf{+ treća laboratorijska vježba}
 \end{itemize}
 \end{frame}
