--- a/1718/lectures/03_pretrazivanja_filtri_cjevovodi/03_pretrazivanja_filtri_cjevovodi.tex
+++ b/1718/lectures/03_pretrazivanja_filtri_cjevovodi/03_pretrazivanja_filtri_cjevovodi.tex
@@ -117,8 +117,7 @@
   \item Moguće je vrlo složeno kombiniranje filtara uz pomoć odgovarajućih
         operatora
   \begin{itemize}
-    \item Ostaje pitanje, zbog čega standardni izlaz za greške?
-    \item Služi kako bi smo mogli uočiti greške u podacima
+    \item Standardni izlaz za greške služi za lakše debugiranje
   \end{itemize}
 \end{itemize}
 \end{frame}
@@ -127,7 +126,7 @@
 \begin{frame}[t]
 \frametitle{Preusmjeravanje u datoteku (1)}
 \begin{itemize}
-  \item Kako bi preusmjerili izlaz neke naredbe u datoteku koristimo
+  \item Kako bismo preusmjerili izlaz neke naredbe u datoteku koristimo
         operator \shell{">"}
   \begin{itemize}
     \item Pogledajmo razliku između izvršavanja sljedeće dvije naredbe:
