--- a/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
+++ b/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
@@ -130,7 +130,7 @@ echo $HELLO
 	\begin{itemize}
 		\item \shell{[ 1 -eq 1 ]}
 	\end{itemize}
-	\item NB: potreban razmak između zagrada i uvijeta
+	\item NB: potreban razmak između zagrada i uvjeta
 	\item \shell{echo \$?} ispisuje rezultat testa
 	\begin{itemize}
 		\item ako je vraćena 0, to znači True (sjetite se C-ovskog \textit{return 0;})
