Lecture 5 -> Lecture 4 in the title

--- a/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
+++ b/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
@@ -36,8 +36,8 @@
 }
 
 \title{Osnove korištenja operacijskog sustava Linux}
-\subtitle{05. Varijable i kontrola toka}
-\author[Mateo Stjepanović]{Mateo Stjepanović\\Leonard Volarić Horvat\\{\small Nositelj: dr. sc. Stjepan Groš}}
+\subtitle{04. Varijable i kontrola toka}
+\author[Mateo Stjepanović]{Mateo Stjepanović\\{\small Nositelj: dr. sc. Stjepan Groš}}
 \institute[FER]{Sveučilište u Zagrebu \\
 				Fakultet elektrotehnike i računarstva}
 				
@@ -65,7 +65,7 @@
 \begin{itemize}
 	\item Varijable se mogu koristiti kao u bilo kojem drugom jeziku
 	\item Nije potrebno deklarirati varijablu (sličnost s Pythonom)
- 	\item Svaka je varijabla tipa \textit{string}
+ 	\item Svaka je varijabla implicitno tipa \textit{string}
 	\item Dvije vrste varijabli
   	\begin{itemize}
   		\item Globalne varijable (Vidljivo iz više shellova)
