--- a/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
+++ b/1718/lectures/04_varijable_kontrola_toka_zamjenski_znakovi/04_varijable_kontrola_toka_zamjenski_znakovi.tex
@@ -36,7 +36,7 @@
 }
 
 \title{Osnove korištenja operacijskog sustava Linux}
-\subtitle{04. Varijable i kontrola toka}
+\subtitle{04. Varijable i kontrola toka. Zamjenski znakovi}
 \author[Mateo Stjepanović]{Mateo Stjepanović\\{\small Nositelj: dr. sc. Stjepan Groš}}
 \institute[FER]{Sveučilište u Zagrebu \\
 				Fakultet elektrotehnike i računarstva}
