--- a/1819/labs/2/lab02.tex
+++ b/1819/labs/2/lab02.tex
@@ -83,7 +83,7 @@
     se nalazi obilje datoteka skinutih uoči međuispita. Budući da ste sad već
     vični bash eksperti udlučili ste počistiti svoj Downloads direktorij u
     stilu, s isključenim mišem, koristeći bash skriptu koju ste napisali u
-    opskurnom terminal text editoru!
+    opskurnom text editoru!
 
     Da rezimiramo, zadatak je ``pospremiti'' Downloads folder tako da datoteke iz
     njega smjestimo tamo gdje im je i mjesto. Kako znamo gdje je mjesto kojim
@@ -100,7 +100,8 @@
 
     Za početak smo vam pripremili umjetni Downloads folder na kojem ćete
     testirati svoja rješenja. Da bi stvar bila još bolja, možete ga izbrisati
-    i ponovno napraviti baš onakvim kakav je bio u trenutku $t = -0$.
+    i ponovno napraviti baš onakvim kakav je bio u trenutku $t = -0$. Skriptu
+    s rješenjima nazovite \texttt{sort.sh}.
 
     Pretpostakva je da u trenutku pokretanja skripte za postavljanje zadatka,
     vaš trenutni direktorij izgleda ovako:
@@ -118,8 +119,9 @@ $ tree .
     Također, zbog lakšeg eksperimentiranja pripremili smo skripte koje će vam pomoći
     postaviti zadatak tako da ne trošite vrijeme na brisanje krivih pokušaja.
     Za početak je potrebno generirati naš umjetni downloads folder pokretanjem
-    skripte koja je priložena (\shell{setup.sh}). Skiptu za generiranje foldera
-    (\shell{generate\_files.sh}) dohvatite koristeći wget ili pak obični browser.
+    skripte koja je priložena (\shell{setup.sh}). Skiptu za generiranje direktorija
+    (\shell{generate\_files.sh}) dohvatite koristeći wget ili pak obični browser
+    \footnote{\url{https://marvin.kset.org/~okosl/lab2/}}.
 
     \subsubsection*{Pseudokod u nastavku potrebno je implementirati u okviru jedne
     bash skripte}
@@ -143,7 +145,7 @@ za svaki file u direktoriju:
     (format \shell{.mp3}) i  slike (format \shell{.jpg} i \shell{.jpeg}).
     Budući da i dalje ne znate gdje vam je miš odlučili ste čišćenje odraditi
     do kraja u stilu pa ćete proširiti skriptu iz prvog dijela tako da sortira
-    i direktorij razonoda!
+    i direktorij \shell{razonoda}!
 
     \subsubsection*{Pseudokod u nastavku potrebno je implementirati ili u okviru
     skripte ranije ili u okviru nove skripte}
